# NN-examples

./: CatDogsDataset.py  ae.py  cnn_catvsdogs.py  cnn_mnist.py  max_dim_imgs.py  nn_adult.py  nn_dummy.py  predict_cnn.py  preprocessing.ipynb  pyproject.toml
lightning_logs/version_0/: events.out.tfevents.1648417043.mikedev.5914.0
lightning_logs/version_1/: events.out.tfevents.1648417172.mikedev.5976.0
lightning_logs/version_1/checkpoints/: epoch=7-step=14999.ckpt
lightning_logs/version_2/: events.out.tfevents.1648417616.mikedev.6520.0
lightning_logs/version_2/checkpoints/: cnn-epoch=06-val_loss=0.04.ckpt
lightning_logs/version_3/: events.out.tfevents.1648717246.mikedev.6858.0
lightning_logs/version_4/: events.out.tfevents.1648717366.mikedev.6907.0
lightning_logs/version_4/checkpoints/: cnn-epoch=06-val_loss=0.03.ckpt
