[tool.poetry]
name = "nn-examples"
version = "0.1.0"
description = ""
authors = ["mikedev <mik3dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.12.0"
torchvision = "^0.13.0"
pytorch-lightning = "^1.6.5"
Pillow = "^9.2.0"
path = "^16.4.0"
numpy = "^1.23.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
